# app/swagger.json
@@ -1,6 +1,6 @@
 {
   "swagger": "2.0",
-  "host": "localhost:8001",
+  "host": "35.233.176.30:8081",
   "basePath": "/",
   "schemes": [
     "http"
@@ -88,10 +88,13 @@
         "description": "Adds an address entry to the blacklist",
         "responses": {
           "200": {
-            "description": "Returns general VPS status",
+            "description": "Returns status",
             "schema": {
               "type": "string"
             }
+          },
+          "400": {
+            "description": "Bad request"
           }
         },
         "parameters": [
@@ -123,6 +126,19 @@
             "description": "address to be removed from the blacklist"
           }
         ]
+      }
+    },
+    "/notarization-errors": {
+      "get": {
+        "description": "returns a JSON array of the notarization error objects in the DB",
+        "responses": {
+          "200": {
+            "description": "Returns general VPS status",
+            "schema": {
+              "type": "array"
+            }
+          }
+        }
       }
     }
   }
